# TradingFan

./: .gitignore  CODE_ANALYSIS_REPORT.md  README.md  binance_historical_downloader.py  config.yml  demo_optimization.py  generate_professional_report.py  main.py  optimization_demo_report.txt  pyproject.toml  quick_optimization_test.py  real_historical_backtest.py  requirements.txt  rules.md  run_full_optimization.py  secrets.yml.template  test_strategy_optimization.py  test_system.py  view_report_summary.py
.claude/: settings.local.json
analysis/: analyze_btc_momentum_details.py
auto_trader/: __init__.py
auto_trader/core/: __init__.py  account.py  advanced_backtest.py  backtest.py  broker.py  capital_management.py  data.py  data_loader.py  data_quality.py  engine.py  risk.py  risk_enhanced.py  strategy_optimizer.py
auto_trader/strategies/: __init__.py  base.py  breakout.py  mean_reversion.py  ml_strategy.py  momentum.py  trend_following.py
auto_trader/ui/: __init__.py  dashboard.py  realtime_dashboard.py
auto_trader/ui/pages/: __init__.py  asset_manager.py  backtest_analyzer.py  config_manager.py  strategy_monitor.py  trade_logger.py
auto_trader/utils/: __init__.py  config.py  data_utils.py  logger.py  notification.py  professional_report_generator.py  report_generator.py  signal_visualizer.py  time_utils.py
backtest_data/: cache_metadata.json
data_warehouse/: cache_metadata.json
docs/: DATA_DOCUMENTATION.md  ITERATION_LOG.md  rules.md
examples/: demo_signal_visualizer.py  test_signal_visualizer.py  visualize_existing_backtest.py
optimization_results/: momentum_BTCUSDT_1h_20250715_174801_summary.json  momentum_BTCUSDT_1h_20250715_174949_summary.json  momentum_BTCUSDT_1h_20250715_175319_summary.json
scripts/: download_historical_data.py  download_limited_data.py  generate_sample_data.py  multi_crypto_backtest.py  run_real_backtest.py  run_realtime_dashboard.py
tradingview/: TradingView使用指南.md  btc_momentum_advanced_tv.pine  btc_momentum_tradingview.pine
